--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/button": "^2.0.18",
+    "@chakra-ui/color-mode": "^2.1.12",
+    "@chakra-ui/form-control": "^2.0.18",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/input": "^2.0.22",
     "@chakra-ui/react": "^2.7.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
