--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@whatsapp-clone/common-validate": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
