--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@chakra-ui/form-control": "^2.0.18",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/input": "^2.0.22",
+    "@chakra-ui/layout": "^2.2.0",
     "@chakra-ui/react": "^2.7.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
