--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/input": "^2.0.22",
     "@chakra-ui/layout": "^2.2.0",
+    "@chakra-ui/modal": "^2.2.12",
     "@chakra-ui/react": "^2.7.1",
     "@chakra-ui/tabs": "^2.1.9",
     "@testing-library/jest-dom": "^5.16.5",
