--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@whatsapp-clone/common-validate": "^1.0.2",
     "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.22",
     "pg": "^8.7.1",
     "socket.io": "^4.7.1",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   }
 }
